# bootcamp-ao-vivo

./: Dockerfile  README.md  dbt-requirements.txt  docker-compose.override.yml  exemplo_00.py  packages.txt  pyproject.toml  requirements.txt
.astro/: config.yaml
bootcamp/models/: porcentagem_dos_cargos.sql  schema.yml  somente_da_area.sql  sources.yml
dags/: minha_dag.py  minha_dag_airbyte.py  minha_dag_airbyte_dbt.py  minha_dag_airbyte_sucessed.py  minha_dag_dbt.py  pipeline.py
include/bootcamp/: dbt_project.yml
